Bug 103253 - blob.h:138:1: error: unknown type name 'ssize_t'
Summary: blob.h:138:1: error: unknown type name 'ssize_t'
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Mac OS X (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2017-10-13 08:14 UTC by Vinson Lee
Modified: 2017-10-25 14:37 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-10-13 08:14:20 UTC
mesa: 79d403417cacd2728916e32ae55f4fc2a018515c (master 17.3.0-devel)

  CXX      glsl/shader_cache.lo
In file included from glsl/shader_cache.cpp:47:
./blob.h:138:1: error: unknown type name 'ssize_t'; did you mean 'size_t'?
ssize_t
^~~~~~~
size_t


commit 6935440967e2beccf017c96e75387b9cb71833b4
Author: Connor Abbott <cwabbott0@gmail.com>
Date:   Fri Sep 15 00:29:46 2017 -0400

    compiler/blob: make blob_reserve_bytes() more useful
    
    Despite the name, it could only be used if you immediately wrote to the
    pointer. Noboby was using it outside of one test, so clearly this
    behavior wasn't that useful. Instead, make it return an offset into the
    data buffer so that the result isn't invalidated if you later write to
    the blob. In conjunction with blob_overwrite_bytes(), this will be
    useful for leaving a placeholder and then filling it in later, which
    we'll need to do for handling phi nodes when serializing NIR.
    
    v2 (Jason Ekstrand):
     - Detect overflow in the offset + to_write computation
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>
    Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>
Comment 1 Jason Ekstrand 2017-10-25 14:37:23 UTC
This has been fixed for a while.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.